<resources>

    <!-- menu options -->
    <string name="action_install">Install</string>
    <string name="action_startnewgame">Start New Game</string>
    <string name="action_startnewgame_condensed">New</string>
    <string name="action_showerrors">Show Errors</string>
    <string name="action_hideerrors">Hide Errors</string>
    <string name="action_help">Help</string>
    <string name="action_showstats">Game Statistics</string>
    <string name="action_showgameoptions">Game Options</string>

    <!-- dialog text for start new game prompt-->
    <string name="dialog_startnewgame_prompt">Start a new game?</string>
    <string name="dialog_startnewgame_completion_message">Completed %1$d words in %2$s (%3$.1f/min)</string>
    <string name="dialog_startnewgame_yes">Yes</string>
    <string name="dialog_startnewgame_game_options">Game Options</string>
    <string name="dialog_startnewgame_no">No</string>

    <!-- shared dialog text for help and stats dialogs -->
    <string name="dialog_ok">OK</string>

    <!-- dialog text for help dialog-->
    <string name="dialog_help_title">Game Instructions</string>
    <string name="dialog_help_step1">1. Touch a puzzle word</string>
    <string name="dialog_help_step2">2. See clue on keyboard</string>
    <string name="dialog_help_step3">3. Enter an answer</string>
    <string name="dialog_help_step4">4. Tap \"next\" to select next word</string>
    <string name="dialog_help_step5">5. Background the app to pause the timer</string>
    <string name="dialog_help_accents">Accents are important!</string>
    <string name="dialog_help_menu_title">Menu</string>
    <string name="dialog_help_startnewgame">1. Start New Game</string>
    <string name="dialog_help_showerrors">2. Show/Hide Errors</string>
    <string name="dialog_help_gameoptions">3. Game Options</string>
    <string name="dialog_help_gamestats">4. Game Statistics</string>
    <string name="dialog_help_showerrors_desc">Errored cells turn red</string>
    <string name="dialog_help_keyboard_infinitive">Tap infinitive to save typing</string>
    <string name="dialog_help_keyboard_arrows">Use arrows to navigate word</string>
    <string name="dialog_help_gameoptions_any_mix">Verb type and tense/mood</string>
    <string name="dialog_help_gameoptions_vosotros">Pronoun options</string>
    <string name="dialog_help_gamestats_desc1">See your progress</string>
    <string name="dialog_help_gamestats_desc2">History for completed games</string>
    <string name="onboarding_message">Tap on the infinitive\nto prefill the puzzle.\nThen modify\nthe verb ending.</string>

    <!-- dialog text for stats dialog-->
    <string name="dialog_stats_heading">Conjugation Coverage</string>
    <string name="stats_label_regular">Regular</string>
    <string name="stats_label_spelling_change">Spelling</string>
    <string name="stats_label_stem_change">Stem</string>
    <string name="stats_label_other_irregular">Other</string>
    <string name="stats_label_ar">ar</string>
    <string name="stats_label_ir">ir</string>
    <string name="stats_label_er">er</string>
    <string name="stats_label_present">Present</string>
    <string name="stats_label_gerund">Gerund</string>

    <!-- toast text-->
    <string name="toast_noerrorsfound">No errors</string>

    <!-- dialog text for game options prompt-->
    <string name="dialog_options_newgame">New Game</string>
    <string name="dialog_options_okay">Save</string>
    <string name="dialog_options_cancel">Cancel</string>

    <!--game options - regularity-->
    <string name="option_title_regularity">Regularity</string>
    <string name="option_regularity_regular">Regular</string>
    <string name="option_regularity_spelling_change">Spelling Change</string>
    <string name="option_regularity_stem_change">Stem Change</string>
    <string name="option_regularity_other_irregular">Other Irregular</string>

    <!--game options - infinitive endings -->
    <string name="option_title_infinitive_endings">Infinitive Endings</string>
    <string name="option_infinitive_ending_ar">-ar</string>
    <string name="option_infinitive_ending_ir">-ir</string>
    <string name="option_infinitive_ending_er">-er</string>

    <!--game options - tense/mood -->
    <string name="option_title_tense_mood">Tense/Mood</string>
    <string name="option_tense_present">Present</string>
    <string name="option_tense_preterit">Preterite</string>
    <string name="option_tense_imperfect">Imperfect</string>
    <string name="option_tense_conditional">Conditional</string>
    <string name="option_tense_future">Future</string>
    <string name="option_tense_imperative">Imperative</string>
    <string name="option_tense_subjunctive_present">Subjunctive Present</string>
    <string name="option_tense_subjunctive_imperfect">Subjunctive Imperfect</string>
    <string name="option_tense_gerund">Gerund</string>
    <string name="option_tense_past_participle">Past Participle</string>
    <string name="option_message">Applied on new game</string>

    <!--Clue text - tense/mood -->
    <string name="clue_tense_present">Present tense of</string>
    <string name="clue_tense_preterit">Preterite tense of</string>
    <string name="clue_tense_imperfect">Imperfect tense of</string>
    <string name="clue_tense_conditional">Conditional tense of</string>
    <string name="clue_tense_future">Future tense of</string>
    <string name="clue_tense_imperative">Imperative of</string>
    <string name="clue_tense_subjunctive_present">Subjunctive Present tense of</string>
    <string name="clue_tense_subjunctive_imperfect">Subjunctive Imperfect tense of</string>
    <string name="clue_tense_gerund">Gerund of</string>
    <string name="clue_tense_past_participle">Past Participle of</string>

    <!--game options - subject pronouns -->
    <string name="option_title_subject_pronouns">Subject Pronouns</string>
    <string name="option_subject_pronoun_singular">Yo, Tú, Él/Ella/Ud. (singular)</string>
    <string name="option_subject_pronoun_plural">Nosotros, Ellos/Ellas/Uds. (plural)</string>
    <string name="option_subject_pronoun_vosotros">Vosotros</string>

    <!-- error messages -->
    <string name="error_game_setup_failure">Unable to set up game</string>
    <string name="error_initial_setup_failure">Unable to complete initial set up</string>
    <string name="keyboard_next">next</string>

</resources>
