<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_vertical"
              android:orientation="horizontal"
              android:paddingEnd="@dimen/default_margin"
              android:paddingStart="@dimen/default_margin"
              android:paddingTop="@dimen/default_margin">

    <!-- y-axis major headings -->
    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="@dimen/stats_map_height"
                  android:layout_marginEnd="@dimen/half_margin"
                  android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/stats_label_other_irregular"
            android:textColor="@color/soft_black"
            android:textSize="@dimen/small_fixed"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/stats_label_stem_change"
            android:textColor="@color/soft_black"
            android:textSize="@dimen/small_fixed"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/stats_label_spelling_change"
            android:textColor="@color/soft_black"
            android:textSize="@dimen/small_fixed"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/stats_label_regular"
            android:textColor="@color/soft_black"
            android:textSize="@dimen/small_fixed"/>

    </LinearLayout>

    <!-- y-axis minor headings -->
    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="@dimen/stats_map_height"
                  android:layout_marginEnd="@dimen/quarter_margin"
                  android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/stats_label_ar"
            android:textColor="@color/soft_black"
            android:textSize="@dimen/small_fixed"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/stats_label_er"
            android:textColor="@color/soft_black"
            android:textSize="@dimen/small_fixed"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/stats_label_ir"
            android:textColor="@color/soft_black"
            android:textSize="@dimen/small_fixed"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/stats_label_ar"
            android:textColor="@color/soft_black"
            android:textSize="@dimen/small_fixed"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/stats_label_er"
            android:textColor="@color/soft_black"
            android:textSize="@dimen/small_fixed"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/stats_label_ir"
            android:textColor="@color/soft_black"
            android:textSize="@dimen/small_fixed"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/stats_label_ar"
            android:textColor="@color/soft_black"
            android:textSize="@dimen/small_fixed"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/stats_label_er"
            android:textColor="@color/soft_black"
            android:textSize="@dimen/small_fixed"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/stats_label_ir"
            android:textColor="@color/soft_black"
            android:textSize="@dimen/small_fixed"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/stats_label_ar"
            android:textColor="@color/soft_black"
            android:textSize="@dimen/small_fixed"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/stats_label_er"
            android:textColor="@color/soft_black"
            android:textSize="@dimen/small_fixed"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/stats_label_ir"
            android:textColor="@color/soft_black"
            android:textSize="@dimen/small_fixed"/>
    </LinearLayout>

    <LinearLayout android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_marginEnd="@dimen/half_margin"
                  android:layout_weight="1"
                  android:orientation="vertical">

        <SurfaceView android:layout_width="match_parent"
                     android:layout_height="@dimen/stats_map_height"
                     android:background="@color/pale_gray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/stats_label_conjugation_type"
            android:textColor="@color/soft_black"
            android:textSize="@dimen/small_fixed"/>

    </LinearLayout>

</LinearLayout>

